# neverhot

./: .gitattributes  .gitignore  LICENSE  db.sqlite3  dddd  pyproject.toml  readme.md  render.yaml  requirements.txt
django_project/: settings.py  urls.py
pages/: forms.py  tests.py  urls.py  views.py
static/css/: demo.css  main.css  weather.css
staticfiles/: staticfiles.json
staticfiles/css/: main.css
templates/: add_city.html  base.html  base2.html  chart.html  city_detail.html  city_index.html  city_new.html  city_select.html  csrf-demo.html  demo.html  example.html  formset.html  home.html  no_city_found.html  partial_location_results.html  partial_results.html  privacy.html  search.html  weather.html  weather2.html
templates/partials/: field.html  partial_location_results.html  partial_results.html  time.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  signup.html
templates/tables/: bootstrap_htmx.html  city_table_htmx.html  product_table_htmx.html
users/: managers.py  models.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_alter_customuser_email.py  0004_alter_customuser_email.py  0005_alter_customuser_managers.py
weather/: admin.py  filters.py  forms.py  managers.py  models.py  tables.py  tasks.py  tests.py  urls.py  utils.py  views.py
weather/migrations/: 0001_initial.py  0002_alter_city_city_name.py  0002_forecast.py  0002_weather.py  0003_city_icon.py  0003_weather_last_updated_alter_weather_datetime_and_more.py  0005_forecast_dt_naive.py  (+7 more)
(+2 files in other folders)
