[tool.poetry]
name = "never-hot"
version = "0.1.0"
description = ""
authors = ["SonShua <77282001+SonShua@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
